--- a/index.html
+++ b/index.html
@@ -17,7 +17,38 @@
     <title>Galaxy Buds pro</title>
   </head>
   <body>
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="assets/img/logo.png" alt="" />
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link active-link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="#specs" class="nav__link">Specs</a>
+            </li>
+            <li class="nav__item">
+              <a href="#battery" class="nav__link">Battery Life</a>
+            </li>
+            <li class="nav__item">
+              <a href="#colors" class="nav__link">Colors</a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
+          </div>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-function-line"></i>
+        </div>
+      </nav>
+    </header>
 
     <main class="main"></main>
 
