Creating home section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,35 @@
       </nav>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="home section" id="home">
+                <div class="home__container container grid">
+                    <div>
+                        <img src="assets/img/buds.png" alt="" class="home__img">
+                    </div>
+                    
+                    <div class="home__data">
+                        <div class="home__header">
+                            <h1 class="home__title">Galaxy</h1>
+                            <h2 class="home__subtitle">Buds Pro</h2>
+                        </div>
+
+                        <div class="home__footer">
+                            <h3 class="home__title-description">Overview</h3>
+                            <p class="home__description">Enjoy award-winning Beats sound with wireless listening freedom and a sleek, 
+                                streamlined design with comfortable padded earphones, delivering first-rate playback.
+                            </p>
+                            <a href="#" class="button button--flex">
+                                <span class="button--flex">
+                                    <i class="ri-shopping-bag-line button__icon"></i></i> Buy now
+                                </span>
+                                <span class="home__price">$120</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+    </main>
 
     <footer class="footer section"></footer>
 
