Creating buying section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
                 </div>
             </section>
 
+            <section class="buy section">
+                <div class="buy__container container grid">
+                    <div class="buy__animate">
+                        <h2 class="buy__title">The right fit is right here</h2>
+                        <p class="buy__description">Get you Galaxy Buds Now</p>
+                        <a href="#" class="button button--flex">
+                            <i class="ri-shopping-bag-line button__icon"></i> Shop Now
+                        </a>
+                    </div>
+
+                    <img src="assets/img/all.png" alt="" class="buy__img">
+                </div>
+            </section>
+
     </main>
 
     <footer class="footer section"></footer>
