adding scroll up

--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                 </div>
             </div>
     </footer>
+    <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-s-line scrollup__icon"></i>
+        </a>
 
     <script src="js/script.js"></script>
   </body>
