--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 
                         <div class="home__footer">
                             <h3 class="home__title-description">Overview</h3>
-                            <p class="home__description">Enjoy award-winning Beats sound with wireless listening freedom and a sleek, 
-                                streamlined design with comfortable padded earphones, delivering first-rate playback.
+                            <p class="home__description">These are true wireless earbuds, with pro-grade technology for immersive sound like never before. While Intelligent ANC lets you seamlessly switch between noise canceling and fully adjustable ambient sound. So let the outside in - or keep it out. It's your world. Galaxy Buds Pro let you hear the best of it.
                             </p>
                             <a href="#" class="button button--flex">
                                 <span class="button--flex">
@@ -264,6 +263,7 @@
             <i class="ri-arrow-up-s-line scrollup__icon"></i>
         </a>
 
+        <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
