--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </section>
 
             <section class="battery section grid" id="battery">
-                <h2 class="section__title section__title-gradient">battery</h2>
+                <h2 class="section__title section__title-gradient">Battery Life</h2>
 
                 <div class="battery__container container grid">
                     <div>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="battery__data">
-                        <p class="battery__description">Turn on ANC and Galaxy Buds Pro give you 5 hours of play time with 13 more in the case. That's 18 hours total. When ANC is off, you get 28 hours total, with 8 hours of play time - and 20 more in the case.
+                        <p class="battery__description">Turn on ANC and Galaxy Buds Pro gives you 5 hours of playtime with 13 more in the case. That's 18 hours in total. When ANC is off, you get 28 hours total, with 8 hours of playtime - and 20 more in the case.
                         </p>
                         <a href="#" class="button button--flex">
                             <i class="ri-information-line button__icon"></i> More info
